# hangman-gui

./: README.md  pyproject.toml  requirements.txt  src.main
src/: __init__.py  main.py
src/game/: engine.py  words.py
src/services/: state_manager.py
src/ui/: app.py  components.py
tests/: test_game.py
