[tool.poetry]
name = "hangman-gui"
version = "0.1.0"
description = "A user-friendly graphical interface for the Hangman game."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tkinter = "*"
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"